[BUGFIX] abstract hidden under side bar
Fixed #223

--- a/lizmap/www/css/map.css
+++ b/lizmap/www/css/map.css
@@ -317,7 +317,7 @@ CSS Sprite ositions calculated via http://instantsprite.com/ or https://draeton.
   bottom:10px;
   /*max-width:30%;
   max-height:90%;*/
-  z-index:1000;
+  z-index:1040;
   overflow:auto;
   /*background-color: #F0F0F0;*/
   background-color:#4A4A4A;
